banner and blog section added

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://fonts.maateen.me/solaiman-lipi/font.css"
+      rel="stylesheet"
+    />
+
     <title>Travel24</title>
   </head>
   <body>
